Add Attention shortcode

--- a/src/content/lessen/fysica/krachten_1/intro/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/intro/index.mdx
@@ -84,26 +84,28 @@ dat niet zonder de winkelkar aan te raken. We spreken dan over een
 We gaan voor de eenvoud alle voorwerpen voorstellen als **puntmassa**'s. Dat
 betekent dat we in gedachte elk voorwerp waar krachten op inwerken gaan
 vervangen door een klein puntje dat dezelfde massa heeft als het voorwerp. We
-tekenen de puntmassa **in het zwaartepunt van het voorwerp**
-<Mute text="(lees: het midden)" />.
-De krachten die inwerken op het voorwerp, tekenen we dan ook in die
-puntmassa.
+tekenen de puntmassa **in het zwaartepunt van het voorwerp** <Mute text="(lees: 
+het midden)" />. De krachten die inwerken op het voorwerp, tekenen we dan ook 
+in die puntmassa.
 
 ![](img/puntmassa.png)
 
 ## Samengevat
 
-{{< attention "Kracht" >}}
+<Attention title="Kracht">
+
 **Kracht** is een grootheid die beschrijft op welke manier er wordt **geduwd**
 tegen of **getrokken** aan een voorwerp. Wanneer een kracht inwerkt
 op een voorwerp, kan de kracht een **verandering van de snelheid** en/of een
 **vervorming** van dat voorwerp tot gevolg hebben.
-{{< /attention >}}
 
-{{< attention "Veld- en contactkrachten" >}}
+</Attention>
+
+<Attention title="Veld- en contactkrachten">
 
 -   Een **veldkracht** is een kracht die **op afstand** werkt en het gevolg is
     van een krachtveld zoals het zwaartekrachtsveld;
 -   Een **contactkracht** is een kracht die enkel kan optreden wanneer er **direct
     contact** is tussen twee voorwerpen.
-    {{< /attention >}}
+
+</Attention>
