--- a/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/kracht_op_voorwerp/index.mdx
@@ -68,17 +68,19 @@ Voor de krachten die inwerken op Maria, ziet dat er als volgt uit:
 
 ## Samengevat
 
-{{< attention "Krachten op een voorwerp" >}}
+<Attention title="Krachten op een voorwerp">
+
 Wanneer we _"de krachten op een voorwerp"_ tekenen, tekenen we alle krachten
 die **door andere voorwerpen** worden uitgeoefend **op dat voorwerp**.
 
 ![](img/samenvatting_krachten_op.png)
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Krachten samenleggen in massapunt" >}}
+<Attention title="Krachten samenleggen in massapunt">
+
 We leggen de krachten **samen in een massapunt**. Als massapunt kiezen we een punt dat ongeveer **in het midden van het voorwerp** ligt.
 
 ![](img/samenvatting_in_massapunt.png)
 
-{{< /attention >}}
+</Attention>
