--- a/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/krachtvector/index.mdx
@@ -28,9 +28,9 @@ wordt.
 
 ![](img/krachtvector.png)
 
-Bij een kracht hoort dus zowel een **grootte**
-<Mute text="(hoe hard je trekt of duwt)" /> als een **richting** en **zin**
-<Mute text="(waarheen je trekt of duwt)" />. Daarom is kracht een [vectoriële
+Bij een kracht hoort dus zowel een **grootte** <Mute text="(hoe hard je trekt
+of duwt)" /> als een **richting** en **zin** <Mute text="(waarheen je trekt of
+duwt)" />. Daarom is kracht een [vectoriële
 grootheid](/lessen/wiskunde/vector_1/vectoriele_grootheden). In symbolen noteren we een **krachtvector** als een _F_ met een
 pijltje boven: $\vec{F}$.
 
@@ -49,8 +49,8 @@ Wanneer Dirk tegen Maria duwt, bijvoorbeeld, zouden we de **kracht van Dirk op M
 
 De **grootte** van een krachtvector $\vec{F}$ zegt **hoeveel kracht** er wordt
 uitgeoefend, dus hoeveel newton. De grootte van een kracht is **altijd positief**. We noteren de
-grootte van $\vec{F}$ als $\norm{\vec{F}}$ of als $F$
-<Mute text="(merk op: geen pijltje op de $F$)" />.
+grootte van $\vec{F}$ als $\norm{\vec{F}}$ of als $F$ <Mute text="(merk op:
+geen pijltje op de $F$)" />.
 
 | Schrijf          | Lees                     |
 | ---------------- | ------------------------ |
@@ -89,12 +89,14 @@ van het flesje duwt.
 
 ## Samengevat
 
-{{< attention "Vectoriële grootheden" >}}
+<Attention title="Vectoriële grootheden">
+
 Een vectoriële grootheid is een grootheid met een **grootte**, een **richting**
 en een **zin**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Kracht is een vector" >}}
+<Attention title="Kracht is een vector">
+
 Een **krachtvector** $\vec{F}$ heeft **vier eigenschappen**:
 
 1. De **grootte**: hoe groot is de kracht? Notatie: $\norm{\vec{F}}$ of $F$.
@@ -104,13 +106,14 @@ Een **krachtvector** $\vec{F}$ heeft **vier eigenschappen**:
 4. Het **aangrijpingspunt**: waar wordt de kracht uitgeoefend op het voorwerp?
 
 ![](img/grootte_richting_zin.png)
-{{< /attention >}}
+</Attention>
 
-{{< attention "Schrijfwijze voor krachten" >}}
+<Attention title="Schrijfwijze voor krachten">
+
 | Schrijf | Lees |
 |---------|------|
 |$\vec{F}$| De krachtvector $\vec{F}$ |
 |$\norm{\vec{F}}$| De grootte van $\vec{F}$ |
 |$F$| De grootte van $\vec{F}$ |
 | $\vec{F}_{AB}$ | De kracht die _A_ uitoefent op _B_ |
-{{< /attention >}}
+</Attention>
