--- a/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/normaalkracht_en_gewicht/index.mdx
@@ -112,15 +112,17 @@ maken.
 
 ## Samengevat
 
-{{< attention "Normaalkrachten" >}}
+<Attention title="Normaalkrachten">
+
 
 Een normaalkracht $\vec{F}_n$ is een kracht die geleverd wordt **door een
 ondersteuning** en inwerkt **op het ondersteunde voorwerp**. Een normaalkracht
 staat **altijd loodrecht op het steunoppervlak**.
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Gewicht" >}}
+<Attention title="Gewicht">
+
 
 Het gewicht $\vec{F}_g$ van een ondersteund voorwerp is de **kracht** die
 geleverd wordt **door een ondersteund voorwerp** en inwerkt **op de
@@ -129,4 +131,4 @@ ondersteuning**.
 Het gewicht heeft altijd **dezelfde grootte en richting als $\vec{F}_n$**, maar
 heeft een **tegengestelde zin**.
 
-{{< /attention >}}
+</Attention>
