--- a/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
@@ -61,7 +61,8 @@ we verwachten. 👍
 
 ## Samengevat
 
-{{< attention "Resulterende kracht tekenen" >}}
+<Attention title="Resulterende kracht tekenen">
+
 Wanneer er verschillende krachten inwerken op een voorwerp, kunnen we de
 resulterende kracht tekenen door die krachten vectorieel op te tellen.
-{{< /attention >}}
+</Attention>
