--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -29,10 +29,9 @@ zullen we eerst eens bekijken waarom snelheid juist een vector is.
 We leerden in een [eerdere les](krachtvector) al dat kracht een
 vectoriële grootheid is. Dat betekent dat een kracht een **grootte, richting en
 zin** heeft. Net als kracht, is **snelheid ook een vectoriële grootheid**. Zo
-is het niet alleen belangrijk hoe snel je rijdt
-<Mute text="(= grootte van de vector)" />, maar ook waar je naartoe rijdt
-<Mute text="(= richting en zin van de vector)" />. We schrijven de
-snelheidsvector als $\vec{v}$.
+is het niet alleen belangrijk hoe snel je rijdt <Mute text="(= grootte van de
+vector)" />, maar ook waar je naartoe rijdt <Mute text="(= richting en zin van
+de vector)" />. We schrijven de snelheidsvector als $\vec{v}$.
 
 ![](img/snelheidsvector.png)
 
@@ -146,16 +145,18 @@ van richting. De snelheidsvector blijft zoals die was.
 
 ## Samengevat
 
-{{< attention "Snelheidsverandering" >}}
+<Attention title="Snelheidsverandering">
+
 Zowel de grootte als de richting van de snelheidsvector $\vec{v}$ kunnen veranderen.
 
 Wanneer de **grootte** verandert, **versnelt of vertraagt** het voorwerp. Wanneer de **richting** verandert, **neemt het voorwerp een bocht**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "$\vec{F}_r$ bepaalt de snelheidsverandering" >}}
+<Attention title="$\vec{F}_r$ bepaalt de snelheidsverandering">
+
 Wanneer $\vec{F}_r$ **dezelfde richting** en **dezelfde zin** heeft als $\vec{v}$, dan **versnelt** het voorwerp.
 
 Wanneer $\vec{F}_r$ **dezelfde richting** heeft als $\vec{v}$, maar een **verschillende zin**, dan **vertraagt** het voorwerp.
 
 Wanneer $\vec{F}_r$ **loodrecht staat** op $\vec{v}$ dan neemt het voorwerp **een bocht**.
-{{< /attention >}}
+</Attention>
