--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -54,8 +54,8 @@ We zeggen dat het zwaarteveld van de aarde sterker is dan het zwaarteveld van
 de maan. De **zwaarteveldsterkte** zegt hoe hard er aan
 voorwerpen met een bepaalde massa wordt getrokken door de zwaartekracht. Het
 symbool voor de zwaarteveldsterkte is $g$ en de eenheid van $g$ is
-$\si{N/kg}$. Dat kan je interpreteren als met hoeveel kracht
-<Mute text="(newton)" /> een hemellichaam <Mute text="(bv. de aarde)" /> trekt
+$\si{N/kg}$. Dat kan je interpreteren als met hoeveel kracht <Mute
+text="(newton)" /> een hemellichaam <Mute text="(bv. de aarde)" /> trekt
 aan een massa van één kilogram.
 
 | Grootheid          | Symbool | Eenheid     | Interpretatie                                                          |
@@ -115,11 +115,12 @@ hetzelfde aanvoelt qua gewicht als twee voetballen op aarde.
 
 ## Samengevat
 
-{{< attention "Grootte van de zwaartekracht berekenen" >}}
+<Attention title="Grootte van de zwaartekracht berekenen">
+
 De grootte van de zwaartekracht op een voorwerp vind je door de massa van dat
 voorwerp te vermenigvuldigen met de zwaarteveldsterkte $g$.
 
 $$F_{z} = m \cdot g$$
 
 Voor situaties op aarde mag je ervan uitgaan dat $g = 9{,}81~\si{N/kg}$.
-{{< /attention >}}
+</Attention>
