--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -74,13 +74,13 @@ lijnen botsen tegen de bol en kunnen het scherm erachter onmogelijk verlichten.
 
 ## Diffuse lichtbron: zachte schaduw
 
-Om te weten hoe de schaduw er bij een
-[diffuse lichtbron](lichtbronnen#puntvormige-en-diffuse-lichtbronnen)
-uit ziet, kijken we op welke plekken er wel of geen lichtstralen geraken.
-Omdat een diffuse lichtbron eigenlijk bestaat uit allemaal
-kleine puntlichtbronnen, bekijken we de schaduw van enkele van die
-puntlichtbronnen apart.
-<Mute text="Om de illustratie eenvoudig te houden, beperken we ons tot een bolvormige diffuse lichtbron." />
+Om te weten hoe de schaduw er bij een [diffuse
+lichtbron](lichtbronnen#puntvormige-en-diffuse-lichtbronnen) uit ziet, kijken
+we op welke plekken er wel of geen lichtstralen geraken.  Omdat een diffuse
+lichtbron eigenlijk bestaat uit allemaal kleine puntlichtbronnen, bekijken we
+de schaduw van enkele van die puntlichtbronnen apart. <Mute text="Om de
+illustratie eenvoudig te houden, beperken we ons tot een bolvormige diffuse
+lichtbron." />
 
 ![](img/diffuse_bron_straal_schaduwen.png)
 
