--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -120,15 +120,15 @@ En we krijgen een vergelijking! Wanneer we deze oplossen, vinden we de <span cla
 \end{split}
 
 En inderdaad, $f(\orange{4}) = -\orange{4} + 4 = 0$! De nulwaarde is dus
-$\orange{4}$ en het nulpunt is $(\orange{4}, 0)$
-<Mute text="(met een x- én y-coördinaat)" />.
-Dit kan je ook zien op onderstaande grafiek:
+$\orange{4}$ en het nulpunt is $(\orange{4}, 0)$ <Mute text="(met een x- én
+y-coördinaat)" />.  Dit kan je ook zien op onderstaande grafiek:
 
 ![](plt/nulpunt.png)
 
 ## Samengevat
 
-{{< attention "Snijpunten van twee functies" >}}
+<Attention title="Snijpunten van twee functies">
+
 De **snijpunten** van twee functies $f(x)$ en $g(x)$ vind je door eerst de twee **[functievoorschriften](../functies/voorschrift) aan elkaar gelijk te stellen**:
 
 \begin{split}
@@ -137,9 +137,10 @@ f(x) &= g(x)\\\\\
 \end{split}
 
 De oplossing van deze vergelijking geeft de $x-$coördinaat van elk snijpunt. Als je elke $x-$coördinaat in $f(x)$ of $g(x)$ invult, krijg je de bijhorende $y-$coördinaat.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Nulpunten van een functie" >}}
+<Attention title="Nulpunten van een functie">
+
 De **nulpunten** van een functie $f(x)$ vind je door het **[functievoorschrift](../functies/voorschrift) gelijk aan nul te stellen**:
 
 \begin{split}
@@ -148,4 +149,4 @@ f(x) &= 0\\\\\
 \end{split}
 
 De oplossing van deze vergelijking geeft de $x-$coördinaat van elk nulpunt (de nulwaarde). De $y-$coördinaat van een **nul**punt is uiteraard altijd $0$.
-{{< /attention >}}
+</Attention>
