--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -88,12 +88,14 @@ $$V = \\{\orange{1}, \orange{-3}\\}$$
 
 ## Samengevat
 
-{{< attention "Vergelijking" >}}
+<Attention title="Vergelijking">
+
 Een vergelijking is iets van de vorm
 $$\text{linkerlid} = \text{rechterlid}$$
 Waarbij $\text{linkerlid}$ en $\text{rechterlid}$ een of meerdere **onbekenden** bevatten. Vaak is er maar één onbekende, namelijk $x$.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Oplossingsverzameling" >}}
+<Attention title="Oplossingsverzameling">
+
 Een vergelijking is _opgelost_ als je de waarden van de onbekenden vindt waarvoor de gelijkheid klopt. De _oplossingsverzameling_ is de verzameling van die waarden.
-{{< /attention >}}
+</Attention>
