--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -145,7 +145,8 @@ is $V = \\{-\frac{14}{5}\\}$.
 
 ## Samengevat
 
-{{< attention "Oplossen van een vergelijking in de eerste graad met één onbekende" >}}
+<Attention title="Oplossen van een vergelijking in de eerste graad met één onbekende">
+
 Om een vergelijking op te lossen van de eerste graad met één onbekende, volgen we drie stappen:
 
 1. Kuis de vergelijking op tot iets van de vorm $$a\_{links}\cdot x + b\_{links} = a\_{rechts}\cdot x + b\_{rechts}$$
@@ -158,4 +159,4 @@ Om een vergelijking op te lossen van de eerste graad met één onbekende, volgen
    De oplossing is
    $$x = \frac{b}{a}$$
    met $a \in \mathbb{R}_0$, $b \in \mathbb{R}$.
-   {{< /attention >}}
+   </Attention>
