--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -193,11 +193,10 @@ Zo krijgen we een heel eenvoudige limiet:
 $$\lim\_{\Delta x \to 0} (\green{- 24 - 3\Delta x})$$
 
 Hier zie je duidelijk waar die _wegdrijvende_ $3$ vandaan komt. Wanneer we
-$\Delta x$ kleiner en kleiner kiezen
-<Mute text="(bv. $0{,}1$; $0{,}01$; $0{,}001$;...)" /> gaan we de $\green{-3}$
-steeds vermenigvuldigen met kleiner en kleiner getal en gaan we van de
-$\green{-24}$ steeds een kleiner en kleiner getal aftrekken
-<Mute text="($0{,}3$; $0{,}03$; $0{,}003$;...)" />.
+$\Delta x$ kleiner en kleiner kiezen <Mute text="(bv. $0{,}1$; $0{,}01$;
+$0{,}001$;...)" /> gaan we de $\green{-3}$ steeds vermenigvuldigen met kleiner
+en kleiner getal en gaan we van de $\green{-24}$ steeds een kleiner en kleiner
+getal aftrekken <Mute text="($0{,}3$; $0{,}03$; $0{,}003$;...)" />.
 
 De limiet uitrekenen is heel eenvoudig, want als $\Delta x$ heel dicht naar $0$
 gaat, dan zal $\green{-3 \Delta x}$ ook naar $0$ gaan en blijft dus enkel
@@ -210,7 +209,8 @@ blote handen uitrekenden!
 
 ## Samengevat
 
-{{< attention "De afgeleide in $x = a$ berekenen" >}}
+<Attention title="De afgeleide in $x = a$ berekenen">
+
 
 De afgeleide in $x = a$ van een functie $f(x)$ is gedefinieerd als:
 
@@ -228,4 +228,4 @@ Voor een bepaalde $a$ kan je deze limiet kan je als volgt uitrekenen:
    (boven) van het differentiequotiënt
 5. Vereenvoudig de breuk door $\Delta x$ te schrappen waar dat kan
 6. Bereken de limiet door $\Delta x$ te vervangen door $0$
-   {{< /attention >}}
+   </Attention>
