--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -94,10 +94,10 @@ functie waar **gaten** in zitten. Zo'n functie noemen we een **discontinue**
 functie. We zien in onderstaande functie dat er een gat zit tussen $x = 2$ en
 $x = 5$. Dat gat zorgt ervoor dat we in $x = 2$ **geen rechterlimiet** kunnen
 berekenen, omdat wanneer $\Delta x$ _iets_ groter is dan $0$, dan moeten we de
-functiewaarde berekenen van een x-waarde die _iets_ groter is dan $2$. Maar alle
-x-waarden die _iets_ groter zijn dan $2$
-<Mute text="(bv. $2{,}1$; $2{,}01$; $2{,}001$;...)" /> liggen in die opening en
-hebben dus **geen functiewaarden**.
+functiewaarde berekenen van een x-waarde die _iets_ groter is dan $2$. Maar
+alle x-waarden die _iets_ groter zijn dan $2$ <Mute text="(bv. $2{,}1$;
+$2{,}01$; $2{,}001$;...)" /> liggen in die opening en hebben dus **geen
+functiewaarden**.
 
 ![Discontinue functie tusse x = 2 en x = 5](img/afleidbaarheid_discontinu.png)
 
@@ -120,8 +120,8 @@ afleidbaar omdat noch de linker- noch de rechterafgeleide bestaat.
 
 Wanneer een functie **in elk punt van haar domein** afleidbaar is, is het dus
 **onmogelijk dat die functie discontinu is**. We kunnen dus stellen dat **een
-functie die overal afleidbaar is, altijd continu is**
-<Mute text="(geen gaten bevat)" />.
+functie die overal afleidbaar is, altijd continu is** <Mute text="(geen gaten
+bevat)" />.
 
 ## Functies met "knikken" zijn niet afleidbaar in de knik
 
@@ -150,7 +150,8 @@ asymptoot is dus niet afleidbaar op de x-waarde waar de asymptoot zich bevindt.
 
 ## Samengevat
 
-{{< attention "Afleidbaarheid van een functie" >}}
+<Attention title="Afleidbaarheid van een functie">
+
 
 Een functie is afleidbaar in $x = a$ als en slechts als de linker- en
 rechterafgeleide in $x = a$ **bestaan én gelijk** zijn.
@@ -160,9 +161,10 @@ rechterafgeleide in $x = a$ **bestaan én gelijk** zijn.
 -   De rechterafgeleide is gedefinieerd als: $$ \lim\_{\Delta x
   \underset{\gt}{\to} 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x}$$
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Typische niet-afleidbare punten bij functies" >}}
+<Attention title="Typische niet-afleidbare punten bij functies">
+
 
 Volgende punten van een functie zijn nooit afleidbaar:
 
@@ -171,4 +173,4 @@ Volgende punten van een functie zijn nooit afleidbaar:
 -   Knikpunten van de functie
 -   Punten waar de functie een verticale raaklijn heeft
 
-{{< /attention >}}
+</Attention>
