--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -35,9 +35,9 @@ tussen $\orange{1{,}00~\si{s}}$ en $\orange{3{,}00~\si{s}}$.
 
 ![Gemiddelde snelheid van Maria tussen 1 s en 3 s berekenen](img/maria_avg_speed_1s_3s.png)
 
-Daarvoor moeten we de **afgelegde afstand**
-<Mute text="(hoeveel (kilo)meter?)" /> delen door de **tijd die nodig was**
-<Mute text="(hoeveel uur of seconden?)" /> om die afstand af te leggen:
+Daarvoor moeten we de **afgelegde afstand** <Mute text="(hoeveel (kilo)meter?)"
+/> delen door de **tijd die nodig was** <Mute text="(hoeveel uur of seconden?)"
+/> om die afstand af te leggen:
 
 \begin{split}
 \text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\\\\
@@ -182,7 +182,8 @@ Het is belangrijk om in te zien dat deze alle drie **identiek dezelfde berekenin
 
 ## Samengevat
 
-{{< attention "Wat is een differentiequotiënt?" >}}
+<Attention title="Wat is een differentiequotiënt?">
+
 Een differentiequotiënt zegt hoeveel de $\green{\text{functiewaarde}}$
 gemiddeld $\orange{\text{per x-eenheid}}$ verandert tussen een gekozen
 $\orange{x\_1}$ en $\orange{x\_2}$.
@@ -198,4 +199,4 @@ $$\frac{\green{\Delta f(x)}}{\orange{\Delta x}}$$
 Een andere schrijfwijze vervangt $\orange{x\_2} - \orange{x\_1}$ door $\orange{\Delta x}$, $\green{f(x\_2)}$ door $\green{f(x\_1 + \Delta x)}$ en vervangt ten slotte $\green{x\_1}$ overal door $\green{a}$:
 
 $$\frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}$$
-{{< /attention >}}
+</Attention>
