--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -17,8 +17,8 @@ images: []
 Om eentermen met elkaar te vermenigvuldigen of te delen door elkaar, is het
 belangrijk dat we de **rekenregels voor het vermenigvuldigen en delen van
 machten met hetzelfde grondtal** in ons achterhoofd houden. Stel bijvoorbeeld
-dat we de volgende vermenigvuldiging hebben
-<Mute text="(waarbij $a \in \mathbb{R}$)" />:
+dat we de volgende vermenigvuldiging hebben <Mute text="(waarbij $a \in
+\mathbb{R}$)" />:
 
 $$a^2\cdot a^3$$
 
@@ -32,8 +32,8 @@ a^2\cdot a^3 &= a^{2 + 3}\\\\\
 \end{split}
 
 De rekenregel voor het _delen_ van machten met hetzelfde grondtal is heel
-gelijkaardig. Stel dat we de volgende deling moeten uitrekenen
-<Mute text="(waarbij $x \in \mathbb{R}_0$)" />:
+gelijkaardig. Stel dat we de volgende deling moeten uitrekenen <Mute
+text="(waarbij $x \in \mathbb{R}_0$)" />:
 
 $$x^5:x^2$$
 
@@ -163,8 +163,8 @@ $$-3uv^{2}$$
 ## Eentermen met letterexponenten vermenigvuldigen of delen
 
 Het kan soms voorkomen dat een eenterm **letterexponenten** bevat. Stel
-bijvoorbeeld dat we de volgende vermenigvuldiging hebben
-<Mute text="($m, n \in \mathbb{Z}$)" />:
+bijvoorbeeld dat we de volgende vermenigvuldiging hebben <Mute text="($m, n \in
+\mathbb{Z}$)" />:
 
 $$x^{(m + 1)}y^n\cdot x^2y^n$$
 
@@ -214,7 +214,8 @@ $$a^{(-m+ 3)}b^{(m - 3)}$$
 
 ## Samengevat
 
-{{< attention "Eentermen vermenigvuldigen" >}}
+<Attention title="Eentermen vermenigvuldigen">
+
 Het vermenigvuldigen van eentermen gaat als volgt:
 
 1. Vermenigvuldig de **coëfficiënt** van de ene eenterm met de coëfficiënt van
@@ -222,9 +223,10 @@ Het vermenigvuldigen van eentermen gaat als volgt:
 2. Vermenigvuldig het **lettergedeelte** van de ene eenterm met het
    lettergedeelte van de andere eenterm door **exponenten van machten met
    hetzelfde grondtal bij elkaar op te tellen**.
-   {{< /attention >}}
+   </Attention>
 
-{{< attention "Eentermen delen" >}}
+<Attention title="Eentermen delen">
+
 Het delen van eentermen doe je ze:
 
 1. Deel de **coëfficiënt** van de ene eenterm door de coëfficiënt van de andere
@@ -232,4 +234,4 @@ Het delen van eentermen doe je ze:
 2. Deel het **lettergedeelte** van de ene eenterm door het lettergedeelte van
    de andere eenterm door **exponenten van machten met hetzelfde grondtal van
    elkaar af te trekken**.
-   {{< /attention >}}
+   </Attention>
