--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -148,10 +148,11 @@ Klaar! 🎉
 
 ## Samengevat
 
-{{< attention "Eentermen optellen en aftrekken" >}}
+<Attention title="Eentermen optellen en aftrekken">
+
 Eentermen bij elkaar optellen doe je zo:
 
 1. Vereenvoudig alle eentermen;
 2. Duid de gelijksoortige eentermen aan;
 3. Tel per soort de coëfficiënten op, of trek ze van elkaar af.
-   {{< /attention >}}
+   </Attention>
