--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -118,15 +118,17 @@ $A$ <Mute text="(de oppervlakte)" /> gelijk is aan $20~\si{m}^2$.
 
 ## Samengevat
 
-{{< attention "Een variabele stelt een element van een verzameling voor" >}}
+<Attention title="Een variabele stelt een element van een verzameling voor">
+
 
 Een variabele is een **symbool** dat een willekeurig **element van een bepaalde
 verzameling** voorstelt, zoals de natuurlijke of rationale getallen. Meestal
 gebruiken we letters zoals $a$, $b$ en $c$ of $x$, $y$ en $z$ als variabele.
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Variabelen invullen" >}}
+<Attention title="Variabelen invullen">
+
 Een variabele **invullen** betekent dat je de variabele vervangt door een
 bepaalde waarde.
-{{< /attention >}}
+</Attention>
