--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -92,9 +92,10 @@ coëfficiënt.
 \end{split}
 
 {{< expand "Waarom mag je alle $(-1)-$en voorop zetten?" >}}
-De vermenigvuldiging van rationale getallen is **commutatief**.
-<Mute text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de
-volgorde waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
+
+De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
+text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de volgorde
+waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
 \begin{split}
 5\cdot 2 \cdot 3 = 30\\\\\
@@ -146,9 +147,10 @@ Dit resultaat terug invullen geeft:
 $$\orange{-240}\cdot y\cdot x^3z^3\cdot y^2$$
 
 {{< expand "Waarom mag je de coëfficiënt apart uitrekenen?" >}}
-De vermenigvuldiging van rationale getallen is **commutatief**.
-<Mute text="(Dat is ook zo voor reële getallen.)" /> Dat betekent dat de
-volgorde waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
+
+De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
+text="(Dat is ook zo voor reële getallen.)" /> Dat betekent dat de volgorde
+waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
 \begin{split}
 4\cdot 5 \cdot 7 = 140\\\\\
@@ -253,11 +255,12 @@ Wat. Een. Prachtige. Eenterm. 😌
 
 ## Samengevat
 
-{{< attention "Eentermen vereenvoudigen" >}}
+<Attention title="Eentermen vereenvoudigen">
+
 Het vereenvoudigen van eentermen doe je als volgt:
 
 1. Werk de **haakjes weg** door machten en mintekens uit te werken;
 2. Vermenigvuldig alle **factoren in het cijfergedeelte** met elkaar;
 3. Combineer de **factoren in het lettergedeelte** per soort en reken hun nieuwe macht uit;
 4. Zet het **toestandsteken en de coëfficiënt voorop** en rangschik de **variabelen alfabetisch**.
-   {{< /attention >}}
+   </Attention>
