--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -80,10 +80,10 @@ Die grafiek ziet er zo uit:
 ![](plt/fx.png)
 
 Om op deze grafiek het **domein** af te lezen, moet je de grafiek **projecteren
-op de x-as**. Het resultaat van de projectie
-is aangeduid **<span class="green">in het groen op de x-as</span>**.
-<Mute text="We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." />
-We zien dan dat $\green{dom f = [-5; +\infty[}$.
+op de x-as**. Het resultaat van de projectie is aangeduid **<span 
+class="green">in het groen op de x-as</span>**. <Mute text="We gaan ervan uit 
+dat de grafiek oneindig blijft verder stijgen aan de rechterkant." /> We zien 
+dan dat $\green{dom f = [-5; +\infty[}$.
 
 ![](plt/dom.png)
 
@@ -91,25 +91,31 @@ Het **beeld** <Mute text="(of het bereik)" /> van diezelfde functie kunnen we
 vinden door de grafiek nu te **projecteren op de y-as**. Op de onderstaande
 grafiek zie je het resultaat van deze projectie
 **<span class="green">in het groen op de y-as</span>**.
+
 ![](plt/bld.png)
-<Mute text="We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." />
-Je vindt dat $\green{bld f = [-6; +\infty[}$.
+
+We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de 
+rechterkant. Je vindt dat $\green{bld f = [-6; +\infty[}$.
 
 ## Samengevat
 
-{{< attention "Definitie domein" >}}
+<Attention title="Definitie domein">
+
 Het **domein van een functie** is de verzameling van alle mogelijke **x-waarden
 waarvoor er een functiewaarde bestaat**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Definitie beeld" >}}
+<Attention title="Definitie beeld">
+
 Het **beeld van een functie** is de verzameling van **alle mogelijke functiewaarden**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Domein aflezen op een grafiek" >}}
+<Attention title="Domein aflezen op een grafiek">
+
 Het **domein van een functie** lees je af op een grafiek door de grafiek te **projecteren op de x-as**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Beeld aflezen op een grafiek" >}}
+<Attention title="Beeld aflezen op een grafiek">
+
 Het **beeld van een functie** lees je af op een grafiek door de grafiek te **projecteren op de y-as**.
-{{< /attention >}}
+</Attention>
