--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -33,10 +33,10 @@ waardentabel:
 | $\orange{4}$        | $\green{2}$                         |
 | $\orange{5}$        | $\green{1{,}5}$                     |
 
-In de laatste rij van die waardentabel is $\orange{x = 5}$ en
-$\green{y = 1{,}5}$. We kunnen dit voorstellen door een puntje met coördinaten
-$(\orange{5};~\green{1{,}5})$.
-<Mute text="(Probeer eens op het puntje te klikken.)" />
+In de laatste rij van die waardentabel is $\orange{x = 5}$ en $\green{y =
+1{,}5}$. We kunnen dit voorstellen door een puntje met coördinaten
+$(\orange{5};~\green{1{,}5})$. <Mute text="(Probeer eens op het puntje te
+klikken.)" />
 
 ![](plt/single_x.png)
 
@@ -57,10 +57,9 @@ krijgen deze mooie figuur:
 ![](plt/loads_of_x.png)
 
 We hebben nu zoveel puntjes op ons assenstelsel dat we eigenlijk niet meer zien
-dat het _aparte_ puntjes zijn. Het zijn wel degelijk aparte puntjes
-<Mute text="(beweeg maar eens over de grafiek)" />,
-maar we zien het als **één doorlopende curve**.
-Deze curve noemen we de **grafiek van de functie**.
+dat het _aparte_ puntjes zijn. Het zijn wel degelijk aparte puntjes <Mute
+text="(beweeg maar eens over de grafiek)" />, maar we zien het als **één
+doorlopende curve**.  Deze curve noemen we de **grafiek van de functie**.
 
 ## Hoogstens één $y$ voor elke $x$
 
