--- a/src/content/lessen/wiskunde/functies/intro/index.mdx
+++ b/src/content/lessen/wiskunde/functies/intro/index.mdx
@@ -42,21 +42,23 @@ Het gebeurt heel vaak dat _iets_ afhangt van _iets anders_:
 -   Hoeveel winst je maakt, hangt af van hoeveel je aankoopt en verkoopt;
 -   ...
 
-Met een functie kunnen we _het verband_ beschrijven tussen het _ene_
-<Mute text="(hoe lang het duurt voor we ergens geraken)" />
-en het _andere_ <Mute text="(hoe snel we bewegen)" />. Het beschrijven van dat
-verband tussen de $x$ en de $y$, doen we met een [functievoorschrift](voorschrift).
+Met een functie kunnen we _het verband_ beschrijven tussen het _ene_ <Mute
+text="(hoe lang het duurt voor we ergens geraken)" /> en het _andere_ <Mute
+text="(hoe snel we bewegen)" />. Het beschrijven van dat verband tussen de $x$
+en de $y$, doen we met een [functievoorschrift](voorschrift).
 
 ## Samengevat
 
-{{< attention "Definitie van een functie" >}}
+<Attention title="Definitie van een functie">
+
 Een functie is een verband tussen twee variabelen $x$ en $y$ waarbij er voor
 iedere $x$ **hoogstens één** $y$ bestaat. Hierbij noemen we $x$ de **onafhankelijke
 variabele** en $y$ de **afhankelijke variabele**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Naamgeving" >}}
+<Attention title="Naamgeving">
+
 
 -   $x$: ingang, onafhankelijke variabele
 -   $y$: uitgang, afhankelijke variabele, functiewaarde van $x$, beeld van $x$
-    {{< /attention >}}
+    </Attention>
