--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -43,9 +43,9 @@ We vinden inderdaad de nulwaarde $x=2$.
 De namen _nulpunten_ en _nulwaarden_ worden soms door elkaar gebruikt, maar
 strikt gezien zijn ze niet hetzelfde. Nul*waarden* zijn x-_waarden_, maar
 nul*punten* zijn _punten_ met een x- én y-coördinaat. De x-coördinaat van een
-nulpunt is de nul*waarde*. De y-coördinaat van een nulpunt is altijd _nul_
-<Mute text="(uiteraard)" />. Als de nulwaarde bijvoorbeeld $\orange{-2}$ is, dan is het
-nulpunt $(\orange{-2},~0)$.
+nulpunt is de nul*waarde*. De y-coördinaat van een nulpunt is altijd
+_nul_ <Mute text="(uiteraard)" />. Als de nulwaarde bijvoorbeeld $\orange{-2}$ is,
+dan is het nulpunt $(\orange{-2},~0)$.
 
 ## Nulpunten op een grafiek
 
@@ -63,12 +63,14 @@ De twee nulpunten zijn aangeduid in het **<span class="orange">oranje</span>**.
 
 ## Samengevat
 
-{{< attention "Definitie nulwaarden" >}}
+<Attention title="Definitie nulwaarden">
+
 De **nulwaarden van een functie** zijn de **x-waarden waarvoor de
 functiewaarde gelijk is aan 0**.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Definitie nulpunten" >}}
+<Attention title="Definitie nulpunten">
+
 De **nulpunten van een functie** zijn de punten op de grafiek van die functie
 die als **y-waarde 0 hebben**. Ze zijn de **snijpunten met de x-as**.
-{{< /attention >}}
+</Attention>
