--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -19,11 +19,10 @@ positief of negatief is. Deze informatie vatten we overzichtelijk samen in een
 ## Tekenschema vanuit een grafiek
 
 Welke x-waarden welk teken <Mute text="(positief/negatief/nul)" /> opleveren
-voor de y-waarden, vatten we samen in een **tekenschema**
-<Mute text='(ook wel "tekentabel" of "tekenverloop" genoemd)'/>.
-Als de [grafiek van een functie](grafiek) is gegeven, kunnen we zien waar de
-functiewaarden <Mute text="(of de y-waarden)" /> _positief_, _negatief_ of _nul_
-zijn.
+voor de y-waarden, vatten we samen in een **tekenschema** <Mute text='(ook wel
+"tekentabel" of "tekenverloop" genoemd)'/>.  Als de [grafiek van een
+functie](grafiek) is gegeven, kunnen we zien waar de functiewaarden <Mute
+text="(of de y-waarden)" /> _positief_, _negatief_ of _nul_ zijn.
 
 ![](plt/tekenschema.png)
 
@@ -138,11 +137,11 @@ Et voilà! 💪 We krijgen hetzelfde tekenschema als daarnet.
 
 ## Enkel nulpunten en grenzen van domein
 
-De x-waarden die in een tekenschema staan <Mute text="(de bovenste rij)" />, zijn _ofwel nulwaarden_
-<Mute text="($-3$ en $3$ in het vorige voorbeeld)"/> _ofwel grenzen van het domein_
-<Mute text="($-\infty$ en $+\infty$ in het voorbeeld)"/>. Er zijn geen andere
-x-waarden nodig. Dat is omdat **het teken van $y$ enkel kan veranderen na een
-nulpunt of na een grens van het domein**.
+De x-waarden die in een tekenschema staan <Mute text="(de bovenste rij)" />,
+zijn _ofwel nulwaarden_ <Mute text="($-3$ en $3$ in het vorige voorbeeld)"/>
+_ofwel grenzen van het domein_ <Mute text="($-\infty$ en $+\infty$ in het
+voorbeeld)"/>. Er zijn geen andere x-waarden nodig. Dat is omdat **het teken
+van $y$ enkel kan veranderen na een nulpunt of na een grens van het domein**.
 
 Voor echt heel speciale functies kan het teken ook na andere x-waarden
 veranderen, namelijk na een _discontinuïteit_. Zulke functies zullen we niet zo
@@ -151,14 +150,16 @@ Zorgen voor later! 👋
 
 ## Samengevat
 
-{{< attention "Tekenschema" >}}
+<Attention title="Tekenschema">
+
 Het **tekenschema van een functie $f$** toont schematisch **het teken van $y$
 voor alle x-waarden** die in het domein van $f$ zitten.
-{{< /attention >}}
+</Attention>
 
-{{< attention "Tekenschema opstellen" >}}
+<Attention title="Tekenschema opstellen">
+
 
 1. Zet de **grenzen van het domein** in het tekenschema;
 2. Zoek alle **nulpunten** en zet ze tussen de grenzen van het domein;
 3. Vind de **tekens van $y$** tussen alle x-waarden in het schema.
-   {{< /attention >}}
+   </Attention>
