--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -25,9 +25,9 @@ $$\text{valtijd in seconden} = 0{,}45 \cdot \sqrt{\text{hoogte in meter}}$$
 
 De valtijd is dus _afhankelijk van_ de hoogte. Daarom kunnen we zeggen dat de
 **valtijd de afhankelijke variabele is**. De afhankelijke variabele duiden we
-altijd aan met $\green{y}$. De variabele waarvan $\green{y}$ afhangt
-<Mute text="(de hoogte in dit geval)" /> noemen we de **onafhankelijke
-variabele**. Die duiden we altijd aan met $\orange{x}$.
+altijd aan met $\green{y}$. De variabele waarvan $\green{y}$ afhangt <Mute
+text="(de hoogte in dit geval)" /> noemen we de **onafhankelijke variabele**.
+Die duiden we altijd aan met $\orange{x}$.
 
 We kunnen in ons voorbeeld de **valtijd** dus vervangen door $\green{y}$ en
 de **hoogte** door $\orange{x}$. Onze formule ziet er dan zo uit:
@@ -130,8 +130,8 @@ Een andere veelgebruikte notatie is om "$f(\ldots)$" te schrijven in plaats van
 
 Wat doen we met het functievoorschrift? Die begint namelijk ook met "$\green{y}
 = $". Wel, die schrijven we zelf als $\green{y(x)}$ of $\green{f(x)}$. Zo geven
-we aan dat we eigenlijk nog niets hebben ingevuld in het voorschrift
-<Mute text="(of anders gezegd dat we letterlijk $x$ hebben ingevuld)" />.
+we aan dat we eigenlijk nog niets hebben ingevuld in het voorschrift <Mute
+text="(of anders gezegd dat we letterlijk $x$ hebben ingevuld)" />.
 
 $$\green{y(x)} = 0{,}45\cdot \sqrt{x}$$
 
@@ -139,7 +139,8 @@ Of:
 
 $$\green{f(x)} = 0{,}45\cdot \sqrt{x}$$
 
-{{< attention "Verwar de haakjes niet met een vermenigvuldiging!" >}}
+<Attention title="Verwar de haakjes niet met een vermenigvuldiging!">
+
 
 Wanneer we "$f(2)$" schrijven, zou je kunnen denken dat we $f$ vermenigvuldigen
 met $2$. **Dat is niet zo!** De haakjes staan er om duidelijk te maken dat we
@@ -147,7 +148,7 @@ $2$ hebben **ingevuld in ons voorschrift**. Het kan in het begin heel
 verwarrend zijn, maar maak er een gewoonte van om bv. $f(2)$ altijd in je hoofd
 te lezen als **"de functiewaarde van $2$"**.
 
-{{< /attention >}}
+</Attention>
 
 ## Negatieve x-waarden invullen
 
@@ -160,7 +161,8 @@ naast een minteken staat... 🤨
 
 ## Samengevat
 
-{{< attention "Wat is een functievoorschrift?" >}}
+<Attention title="Wat is een functievoorschrift?">
+
 
 Een functievoorschrift bestaat uit 2 stukken:
 
@@ -170,9 +172,10 @@ Een functievoorschrift bestaat uit 2 stukken:
 Het functievoorschrift zegt ons **hoe we de functiewaarde moeten berekenen van
 een bepaalde x-waarde**.
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "De functiewaarde van een x-waarde vinden" >}}
+<Attention title="De functiewaarde van een x-waarde vinden">
+
 
 Je kan de **functiewaarde** (of y-waarde) van een bepaalde x-waarde $\orange{x}
 = \orange{a}$ vinden als volgt:
@@ -184,4 +187,4 @@ Je kan de **functiewaarde** (of y-waarde) van een bepaalde x-waarde $\orange{x}
 ⚠️Let op wanneer je de functiewaarde van een **negatief getal** berekent dat je
 het getal steeds **tussen haakjes** zet wanneer je $\orange{x}$ vervangt door
 dat getal.
-{{< /attention >}}
+</Attention>
