--- a/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
@@ -58,7 +58,8 @@ Welke van die manieren is juist: methode \ref{eq:sumfirst}, \ref{eq:multfirst} o
 \ref{eq:expfirst}? De **volgorde van de bewerkingen** geeft ons enkele
 voorrangsregels voor berekeningen zoals $\vba$.
 
-{{< attention "Afspraak" >}}
+<Attention title="Afspraak">
+
 Bij bewerkingen spreken we de volgende **voorrangsregels** af (A.K.A. _de
 volgorde van de bewerkingen_):
 
@@ -68,7 +69,7 @@ volgorde van de bewerkingen_):
 3. **Vermenigvuldingen** <Mute text="(en delingen)" /> hebben voorrang op
    **optellingen** <Mute text="(en aftrekkingen)" />;
 4. **Optellingen** <Mute text="(en aftrekkingen)" /> hebben voorrang op **niets**.
-   {{< /attention >}}
+   </Attention>
 
 De <Mute text="lichtgrijze" /> bewerkingen hebben dezelfde voorrang als de
 bewerking waar ze bij staan. Een vermenigvuldiging en een deling hebben dus
