--- a/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/grafisch_optellen/index.mdx
@@ -109,7 +109,8 @@ Mat andere woorden is het **optellen van vectoren commutatief**.
 
 ## Samengevat
 
-{{< attention "Kop-staartmethode" >}}
+<Attention title="Kop-staartmethode">
+
 
 Bij de kop-staartmethode tekenen we de som van twee vectoren door de **staart
 van de ene vector aan de kop van de andere** te leggen. Vervolgens tekenen we
@@ -117,9 +118,10 @@ een vector **van de vrije staart naar de vrije kop**.
 
 ![Kop-staart methode samengevat](img/kopstaart_summary.png)
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Parallellogram-methode" >}}
+<Attention title="Parallellogram-methode">
+
 
 Bij de parallellogram-methode tekenen we de som van twee vectoren door de
 **staarten van de vectoren op elkaar te leggen**. Vervolgens maken we een
@@ -128,4 +130,4 @@ naar de vrije hoek** van het parallellogram.
 
 ![Parallellogram-methode samengevat](img/parallel_summary.png)
 
-{{< /attention >}}
+</Attention>
