--- a/src/content/lessen/wiskunde/vector_1/intro/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/intro/index.mdx
@@ -44,8 +44,8 @@ vectoren **gelijk**. De volgende twee vectoren, zijn bijvoorbeeld gelijk:
 
 De **grootte** van de vector is **hoe lang** de vector is. De grootte van een
 vector is **altijd positief**. We noteren de grootte van een vector $\vec{v}$
-als $\norm{\vec{v}}$ of ook wel gewoon als $v$
-<Mute text="(geen pijltje op de $v$)" />.
+als $\norm{\vec{v}}$ of ook wel gewoon als $v$ <Mute text="(geen pijltje op de
+$v$)" />.
 
 | Schrijf          | Lees                     |
 | ---------------- | ------------------------ |
@@ -94,7 +94,8 @@ intelligentie...
 
 ## Samengevat
 
-{{< attention "Een vector is een pijl met een grootte, richting en zin" >}}
+<Attention title="Een vector is een pijl met een grootte, richting en zin">
+
 
 -   Een vector is een pijl en heeft een grootte, een richting en een zin;
 -   Wanneer twee vectoren dezelfde grootte, richting en zin hebben, zijn die
@@ -104,4 +105,4 @@ intelligentie...
 
 ![](img/summary.png)
 
-{{< /attention >}}
+</Attention>
