--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -315,44 +315,49 @@ te vermenigvuldigen met elke term van de andere veelterm.
 
 ## Samengevat
 
-{{< attention "Het optellen van veeltermen" >}}
+<Attention title="Het optellen van veeltermen">
+
 Het **optellen** van twee veeltermen doe je zo:
 
 1. Laat de **haakjes weg**.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
-   {{< /attention >}}
+   </Attention>
 
-{{< attention "Het aftrekken van veeltermen" >}}
+<Attention title="Het aftrekken van veeltermen">
+
 Het **aftrekken** van twee veeltermen gaat zo:
 
 1. Laat de **haakjes weg** en **verander de toestandstekens**
    <Mute text="($+$ en $-$)" /> van de termen van de veelterm die **na het
    minteken** stond.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
-   {{< /attention >}}
+   </Attention>
 
-{{< attention "Een veelterm vermenigvuldigen met een eenterm" >}}
+<Attention title="Een veelterm vermenigvuldigen met een eenterm">
+
 Het **vermenigvuldigen** van een **veelterm met een eenterm** gaat als volgt:
 
 1. **Vermenigvuldig de coëfficiënt** van elke term in de veelterm met de
    coëfficiënt van de eenterm
 2. **Vermenigvuldig het lettergedeelte** van elke term in de veelterm met elke
    factor in het lettergedeelte van de eenterm
-   {{< /attention >}}
+   </Attention>
 
-{{< attention "Een veelterm delen door een eenterm" >}}
+<Attention title="Een veelterm delen door een eenterm">
+
 Het **delen van een veelterm door een eenterm** doen we als volgt:
 
 1. **Deel de coëfficiënt** van elke term in de veelterm door de
    coëfficiënt van de eenterm
 2. **Deel het lettergedeelte** van elke term in de veelterm door elke
    factor in het lettergedeelte van de eenterm
-   {{< /attention >}}
+   </Attention>
 
-{{< attention "Een veelterm vermenigvuldigen met een andere veelterm" >}}
+<Attention title="Een veelterm vermenigvuldigen met een andere veelterm">
+
 Twee veeltermen met elkaar te vermenigvuldigen, doen we zo:
 
 1. **Vermenigvuldig elke term van de ene veelterm met elke term van de
    andere veelterm**.
 2. Je krijgt één lange veelterm. **Vereenvoudig en herleid** die veelterm.
-   {{< /attention >}}
+   </Attention>
