--- a/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
@@ -28,14 +28,15 @@ Dat gaat als volgt:
 
 De getalwaarde van de veelterm $-5ab^2 + 3a$ voor $\orange{a=2}$ en $\green{b=-1}$ is dus gelijk aan $-4$.
 
-{{< attention "Negatieve getallen tussen haakjes zetten" >}}
+<Attention title="Negatieve getallen tussen haakjes zetten">
+
 ⚠️ Merk op dat we de $\green{-1}$ **tussen haakjes** hebben gezet wanneer we
 $\green{b}$ erdoor vervingen. Als je dit niet doet, zou je het kwadraat kunnen
 vergeten toepassen op dat minteken.
 
 Zorg dat je een **negatief getal altijd tussen haakjes zet wanneer je een
 variabele erdoor vervangt**.
-{{< /attention >}}
+</Attention>
 
 We kunnen ook eens kijken wat de getalwaarde van de veelterm $-5ab^2 + 3a$ is voor $\orange{a=-3}$ en $\green{b=-2}$:
 
@@ -74,9 +75,10 @@ $q = -\sqrt{2}$:
 
 ## Samengevat
 
-{{< attention "Getalwaarde van een veelterm" >}}
+<Attention title="Getalwaarde van een veelterm">
+
 De **getalwaarde** van een veelterm vind je als volgt:
 
 1. **Vervang elke variabele** door de gegeven getallen.
 2. Je krijgt een bewerking met enkel getallen. **Reken die bewerking uit**.
-   {{< /attention >}}
+   </Attention>
