--- a/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/merkwaardige_producten/index.mdx
@@ -86,7 +86,8 @@ omdat het gelijk is aan $0$.
 
 De uitkomsten zijn samengevat in de onderstaande tabel.
 
-{{< attention "Te onthouden" >}}
+<Attention title="Te onthouden">
+
 De drie **merkwaardige producten** zijn:
 \begin{equation}
 (a + b )^2 = a^2 + 2ab + b^2
@@ -97,7 +98,7 @@ De drie **merkwaardige producten** zijn:
 \begin{equation}
 (a + b ) \cdot (a - b) = a^2 - b^2
 \end{equation}
-{{< /attention >}}
+</Attention>
 
 ## **BLACK OUT**
 
