--- a/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/veelterm/index.mdx
@@ -72,12 +72,14 @@ Enkele andere voorbeelden (controleer ze zelf ook eens):
 
 ## Samengevat
 
-{{< attention "Wat is een veelterm?" >}}
-Een **veelterm** is een **som van twee of meerdere eentermen**. De eentermen waaruit een veelterm bestaat, noemen we kortweg de **termen** van de veelterm.
-{{< /attention >}}
+<Attention title="Wat is een veelterm?">
 
-{{< attention "Graad van een veelterm" >}}
+Een **veelterm** is een **som van twee of meerdere eentermen**. De eentermen waaruit een veelterm bestaat, noemen we kortweg de **termen** van de veelterm.
+</Attention>
+
+<Attention title="Graad van een veelterm">
+
 De graad van een veelterm is gelijk aan de **graad van de term met de hoogste graad** in de veelterm.
 
 Je kan de graad van een veelterm ook opdelen **per variabele**. Dan is de graad van de veelterm in die variabele gelijk aan de **hoogste graad die voorkomt voor die variabele**.
-{{< /attention >}}
+</Attention>
