--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -45,9 +45,9 @@ zijn. Bijvoorbeeld:
 
 Wanneer de **uitdrukking tussen haakjes een eenterm** is, mag je de **haakjes
 gewoon weglaten**. Dat mag omdat de vermenigvuldiging in $\mathbb{R}$
-associatief is en we ervan uitgaan dat alle variabelen reële
-<Mute text="($\in \mathbb{R}$)" /> of rationale
-<Mute text="($\in \mathbb{Q}$)" /> getallen zijn. Bijvoorbeeld:
+associatief is en we ervan uitgaan dat alle variabelen reële <Mute text="($\in
+\mathbb{R}$)" /> of rationale <Mute text="($\in \mathbb{Q}$)" /> getallen zijn.
+Bijvoorbeeld:
 
 -   $$-ab^2 + \sqrt{3}\cdot \orange{(b^3c^2)} = -ab^2 + \sqrt{3}\cdot \orange{b^3c^2}$$
 -   $$6\cdot \orange{(x^3y^3)} + 5y^2 = 6\cdot \orange{x^3y^3} + 5y^2$$
@@ -98,10 +98,10 @@ Wanneer alle eentermen in een veelterm vereenvoudigd zijn, gaan we alle
 **gelijksoortige eentermen bij elkaar optellen**. Dit noemen we ook wel het
 **herleiden van de veelterm**. Om de gelijksoortige eentermen bij elkaar te
 kunnen optellen, moeten we natuurlijk eerst op zoek naar waar er allemaal
-gelijksoortige eentermen zijn in de veelterm. In de vorige stap
-<Mute text="(eentermen vereenvoudigen)" /> hebben we de factoren van de
-eentermen al gerangschikt. Daardoor zal het nu eenvoudiger zijn om de
-gelijksoortige eentermen te vinden.
+gelijksoortige eentermen zijn in de veelterm. In de vorige stap <Mute
+text="(eentermen vereenvoudigen)" /> hebben we de factoren van de eentermen al
+gerangschikt. Daardoor zal het nu eenvoudiger zijn om de gelijksoortige
+eentermen te vinden.
 
 > Als je niet meer goed weet wat we bedoelen met _"gelijksoortige eentermen"_
 > lees dan zeker onze [introductieles over
@@ -185,7 +185,8 @@ graad in $x$. Bijvoorbeeld:
 
 ## Samengevat
 
-{{< attention "Veeltermen vereenvoudigen" >}}
+<Attention title="Veeltermen vereenvoudigen">
+
 Een veelterm kan je als volgt vereenvoudigen:
 
 1. Werk alle haakjes uit
@@ -194,4 +195,4 @@ Een veelterm kan je als volgt vereenvoudigen:
 
 Ten slotte zullen we vaak de termen op een bepaalde manier rangschikken,
 bijvoorbeeld volgens dalende graad van de eentermen.
-{{< /attention >}}
+</Attention>
