--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -120,9 +120,8 @@ Deze berekening heeft drie termen:
 | $-3{,}\orange{35}$ | 2                          |
 
 Het kleinste aantal cijfers na de komma is dus 1. Dat betekent dat we de
-**uitkomst moeten afronden tot op 1 cijfer na de komma**
-<Mute text="(afronden op de tienden dus)" />. De uitkomst van de berekening zelf
-is:
+**uitkomst moeten afronden tot op 1 cijfer na de komma** <Mute text="(afronden
+op de tienden dus)" />. De uitkomst van de berekening zelf is:
 
 $$24{,}28 + 9{,}1 - 3{,}33 = 36{,}75$$
 
@@ -159,7 +158,8 @@ $$0{,}07\orange{6}\gold{8}7134 \approx 0{,}07\orange{7}$$
 
 ## Samengevat
 
-{{< attention "Benaderingsregels" >}}
+<Attention title="Benaderingsregels">
+
 
 -   De uitkomst van een **optelling of aftrekking** moet hetzelfde **aantal
     cijfers na de komma** hebben als het getal in de berekening met het kleinste
@@ -167,4 +167,4 @@ $$0{,}07\orange{6}\gold{8}7134 \approx 0{,}07\orange{7}$$
 -   De uitkomst van een **vermenigvuldiging of deling** moet hetzelfde **aantal
     beduidende cijfers** hebben als het getal in de berekening met het kleinste
     aantal beduidende cijfers.
-    {{< /attention >}}
+    </Attention>
