--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -120,17 +120,19 @@ en vervolgens
 
 ## Samengevat
 
-{{< attention "Omzetten naar macht van 10" >}}
+<Attention title="Omzetten naar macht van 10">
+
 
 -   Als je de komma $N$ plaatsen **naar rechts** wilt opschuiven:
     Vermenigvuldig met <span class="blue">$10^{N}$ om de komma op te schuiven</span> en met <span class="orange">$10^{-N}$ om het getal gelijk te houden</span>.
 -   Als je de komma $N$ plaatsen **naar links** wilt opschuiven:
     Vermenigvuldig met <span class="blue">$10^{-N}$ om de komma op te schuiven</span> en met <span class="orange">$10^N$ om het getal gelijk te houden</span>.
-    {{< /attention >}}
+    </Attention>
 
-{{< attention "Omzetten van een macht van 10" >}}
-Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot \blue{10^c}$
-<Mute text="(met $a, b, c \in \mathbb{R}$)" />:
+<Attention title="Omzetten van een macht van 10">
+
+Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot
+\blue{10^c}$ <Mute text="(met $a, b, c \in \mathbb{R}$)" />:
 
 Vermenigvuldig $a \cdot 10^b$ met
 <span class="blue">$10^{c}$ om de juiste macht van 10 te hebben</span> en met
@@ -138,4 +140,4 @@ Vermenigvuldig $a \cdot 10^b$ met
 Combineer vervolgens de $a \cdot 10^{b} \cdot \orange{10^{-c}}$ tot één getal en
 laat de $\cdot \blue{10^{c}}$ erachter staan.
 
-{{< /attention >}}
+</Attention>
