--- a/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/prefixen/index.mdx
@@ -15,15 +15,12 @@ We kunnen grootheden zoals _lengte_ beschrijven met eenheden zoals _meter_. In e
 
 In een [andere les](machten_van_10) zagen we hoe we machten van 10 kunnen gebruiken om heel grote of heel kleine getallen korter en leesbaarder te schrijven.
 
-Om alles nog korter en leesbaarder te schrijven, gebruiken we vaak **prefixen**. Een prefix
-<Mute text="(of voorvoegsel)" />
-schrijf je telkens _vóór_ de eenheid. Elke prefix stelt een bepaalde macht van 10 voor. Je bent ongetwijfeld al veel prefixen tegengekomen. De $\si{k}$
-<Mute text="(kilo)" />
-in $\si{kg}$
-<Mute text="(kilogram)" />, bijvoorbeeld, is een prefix. Of de $\si{c}$
-<Mute text="(centi)" />
-in $\si{cm}$
-<Mute text="(centimeter)" />.
+Om alles nog korter en leesbaarder te schrijven, gebruiken we vaak
+**prefixen**. Een prefix <Mute text="(of voorvoegsel)" /> schrijf je telkens
+_vóór_ de eenheid. Elke prefix stelt een bepaalde macht van 10 voor. Je bent
+ongetwijfeld al veel prefixen tegengekomen. De $\si{k}$ <Mute text="(kilo)" />
+in $\si{kg}$ <Mute text="(kilogram)" />, bijvoorbeeld, is een prefix. Of de
+$\si{c}$ <Mute text="(centi)" /> in $\si{cm}$ <Mute text="(centimeter)" />.
 
 ## De belangrijkste prefixen
 
@@ -97,9 +94,9 @@ Stel dat we $5{,}2 \green{\si{ k}}\si{m}$ willen omzetten naar $\blue{\si{d}}\si
 
 ## Kubieke- en vierkante-
 
-De eenheid van volume is $\si{m}^3$
-<Mute text="(kubieke meter)" />.
-Als er een prefix voor zo'n eenheid staat, bijvoorbeeld $\orange{\si{c}} \si{m}^3$, wordt die prefix ook tot de derde macht verheven. Er staat dus eigenlijk
+De eenheid van volume is $\si{m}^3$ <Mute text="(kubieke meter)" />.  Als er
+een prefix voor zo'n eenheid staat, bijvoorbeeld $\orange{\si{c}} \si{m}^3$,
+wordt die prefix ook tot de derde macht verheven. Er staat dus eigenlijk
 
 \begin{split}
 \orange{\si{c}}\si{m}^3
