--- a/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/maanfasen_en_zonsverduistering/index.mdx
@@ -83,10 +83,9 @@ ringvormige zonsverduisteringen.
 
 Ruwweg gezegd draait de maan rond de aarde en de aarde rond de zon. Eén rondje
 van de aarde rond de zon duurt ongeveer een jaar. Eén rondje van de maan rond
-de aarde duurt ongeveer een **maan**d
-<Mute text="($27{,}321661$ dagen om precies te zijn)" />.
-Terwijl de maan rond de aarde draait, lijkt vanop aarde de maan
-verschillende vormen aan te nemen: soms een volledige cirkel 🌝, soms
+de aarde duurt ongeveer een **maan**d <Mute text="($27{,}321661$ dagen om
+precies te zijn)" />.  Terwijl de maan rond de aarde draait, lijkt vanop aarde
+de maan verschillende vormen aan te nemen: soms een volledige cirkel 🌝, soms
 iets sikkelvormig 🌛. Dit noemen we de **schijngestalten van de maan** of de
 **maanfasen**.
 
@@ -94,13 +93,13 @@ iets sikkelvormig 🌛. Dit noemen we de **schijngestalten van de maan** of de
 
 Vanuit de ruimte wordt het duidelijk waar deze schijngestalten vandaan komen.
 Terwijl de maan rond de aarde draait, kijken we vanop aarde naar een andere
-kant van de schaduw.
-<Mute text="De nummertjes op de illustratie komen overeen met de schijngestalten op de vorige figuur." />
+kant van de schaduw. <Mute text="De nummertjes op de illustratie komen overeen
+met de schijngestalten op de vorige figuur." />
 
 ![](img/maanfasen_zijaanzicht.png)
 
-In "bovenaanzicht" ziet de situatie er als volgt uit.
-<Mute text="Ook hier komen de nummers overeen." />
+In "bovenaanzicht" ziet de situatie er als volgt uit. <Mute text="Ook hier
+komen de nummers overeen." />
 
 ![](img/maanfasen_bovenaanzicht.png)
 
