--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -20,10 +20,10 @@ te berekenen. Zeker als we voor meerdere x-waarden die afgeleide zouden willen
 berekenen.
 
 Gelukkig kunnen we ook de **afgeleide van een volledige functie** berekenen.
-Dat betekent dat we in één keer in **alle x-waarden**
-<Mute text="(waarin $f(x)$ afleidbaar is)" /> de afgeleide berekenen!
-😮 Dat noemen we de **afgeleide functie** van een functie of kortweg **de
-afgeleide van een functie**.
+Dat betekent dat we in één keer in **alle x-waarden** <Mute text="(waarin
+$f(x)$ afleidbaar is)" /> de afgeleide berekenen!  😮 Dat noemen we de
+**afgeleide functie** van een functie of kortweg **de afgeleide van een
+functie**.
 
 ![Met de afgeleide functie kunnen we sneller afgeleiden berekenen](img/zonder_met_afgeleide_fx.png)
 
@@ -164,11 +164,12 @@ afgeleide te vinden**. Hier leren we later meer over!
 
 ## Samengevat
 
-{{< attention "De afgeleide functie van een functie" >}}
+<Attention title="De afgeleide functie van een functie">
+
 
 De afgeleide functie $f'(x)$ is de functie die voor elke x-waarde (waarin
 $f(x)$ afleidbaar is) de afgeleide van $f(x)$ in die x-waarde geeft.
 
 $$ f'(x) = \lim\_{\Delta x \rightarrow 0} \frac{ f(x + \Delta x) - f(x) }{\Delta x} $$
 
-{{< /attention >}}
+</Attention>
