--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -29,11 +29,10 @@ het je stap voor stap uit!
 
 ## Wat was dat weer, een _rico_?
 
-De **richtingscoëfficiënt** (afgekort _"rico"_) van een eerstegraadsfunctie
-is een maat voor **hoe steil** de rechte is
-<Mute text="(herinner je dat een eerstegraadsfunctie altijd een rechte is)" />.
-Je kan de rico van een eerstegraadsfunctie als volgt uit de grafiek van de
-functie halen:
+De **richtingscoëfficiënt** (afgekort _"rico"_) van een eerstegraadsfunctie is
+een maat voor **hoe steil** de rechte is <Mute text="(herinner je dat een
+eerstegraadsfunctie altijd een rechte is)" />.  Je kan de rico van een
+eerstegraadsfunctie als volgt uit de grafiek van de functie halen:
 
 1. Ga ergens op de rechte staan, maakt niet uit waar
 2. Schuif één stapje <Mute text="(een eenheid)" /> op in de x-richting
@@ -92,9 +91,9 @@ bekijken, zien we toch wel opvallende gelijkenissen met de formule voor het
 
 De formule voor de **rico en het differentiequotiënt zijn identiek dezelfde**!
 Wat betekent dat? Wel, wanneer we een differentiequotiënt berekenen, berekenen
-we eigenlijk ook de **rico** van de eerstegraadsfunctie
-<Mute text="(of de rechte)" /> die door de punten met coördinaten
-$(\orange{x\_1}, \green{f(x\_1)})$ en $(\orange{x\_2}, \green{f(x\_2)})$ gaat!
+we eigenlijk ook de **rico** van de eerstegraadsfunctie <Mute text="(of de
+rechte)" /> die door de punten met coördinaten $(\orange{x\_1},
+\green{f(x\_1)})$ en $(\orange{x\_2}, \green{f(x\_2)})$ gaat!
 
 ![Het differentiequotiënt tussen twee punten is het zelfde als richtingscoëfficiënt (rico) van de rechte die die twee punten verbindt.](img/difquot_als_rico.png)
 
@@ -147,9 +146,10 @@ in $x = a$**.
 
 ## Samengevat
 
-{{< attention "De afgeleide als de rico van een raaklijn" >}}
+<Attention title="De afgeleide als de rico van een raaklijn">
+
 
 De afgeleide van $f(x)$ in $x = a$ berekent de **rico van de raaklijn** aan de
 grafiek van $f(x)$ in $x = a$.
 
-{{< /attention >}}
+</Attention>
