--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -98,9 +98,9 @@ andere voorbeelden:
 
 De graad van een eenterm is de **som van de exponenten** van alle variabelen.
 De eenterm $-4xy^\blue{3}$, bijvoorbeeld, is van de **vierde graad** omdat er
-bij $x$ een macht van $\orange{1}$ staat
-<Mute text="(die schrijven we niet)" /> en bij $y$ een macht van $\blue{3}$:
-$-4x^\orange{1}y^\blue{3}$ en $\orange{1} + \blue{3} = 4$.
+bij $x$ een macht van $\orange{1}$ staat <Mute text="(die schrijven we niet)"
+/> en bij $y$ een macht van $\blue{3}$: $-4x^\orange{1}y^\blue{3}$ en
+$\orange{1} + \blue{3} = 4$.
 
 | Eenterm                              | Graad                                                                                                             |
 | ------------------------------------ | ----------------------------------------------------------------------------------------------------------------- |
@@ -123,7 +123,8 @@ $-4x^\orange{2}y^\blue{3}$, bijvoorbeeld, is van de
 
 ## Samengevat
 
-{{< attention "Wat is een eenterm?" >}}
+<Attention title="Wat is een eenterm?">
+
 
 -   Een **eenterm** is een product van getallen en variabelen.
 -   De **getallen en het toestandsteken** vormen de **coëfficiënt** van de eenterm.
@@ -131,9 +132,10 @@ $-4x^\orange{2}y^\blue{3}$, bijvoorbeeld, is van de
 -   De **exponenten van de variabelen** moeten **natuurlijke getallen** zijn en er
     mogen **geen variabelen in een noemer** staan.
 
-{{< /attention >}}
+</Attention>
 
-{{< attention "Gelijksoortige eentermen" >}}
+<Attention title="Gelijksoortige eentermen">
+
 Twee eentermen zijn **gelijksoortig** als en slechts als ze **hetzelfde
 lettergedeelte** hebben.
-{{< /attention >}}
+</Attention>
