--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -15,8 +15,8 @@ images: []
 Om de machten en wortels van eentermen te kunnen berekenen, is het belangrijk
 dat we de **rekenregels voor de macht van een macht en de wortel van een
 macht** steeds goed in ons achterhoofd houden. We zullen ze hier kort even
-herhalen. Stel dat we de volgende macht moeten uitrekenen
-<Mute text="(waarbij $a \in \mathbb{R}$)" />:
+herhalen. Stel dat we de volgende macht moeten uitrekenen <Mute text="(waarbij
+$a \in \mathbb{R}$)" />:
 
 $$(a^2)^3$$
 
@@ -152,9 +152,9 @@ $$7a^3b^2$$
 
 ## Machten en wortels van lettervormen berekenen
 
-Het kan soms voorkomen dat een eenterm **letterexponenten** bevat.
-Stel bijvoorbeeld dat we de volgende macht van een eenterm willen berekenen
-<Mute text="($m, n \in \mathbb{Z}$)" />:
+Het kan soms voorkomen dat een eenterm **letterexponenten** bevat. Stel
+bijvoorbeeld dat we de volgende macht van een eenterm willen berekenen <Mute
+text="($m, n \in \mathbb{Z}$)" />:
 
 $$(a^{(m - 1)}b^{(n + 2)})^3$$
 
@@ -197,20 +197,22 @@ een macht.
 
 ## Samengevat
 
-{{< attention "De macht van een eenterm berekenen" >}}
+<Attention title="De macht van een eenterm berekenen">
+
 Om de macht van een eenterm te berekenen, doen we het volgende:
 
 1. Bereken de macht van de **coëfficiënt** van de eenterm.
 2. Bereken de macht van het **lettergedeelte** van de eenterm door de
    exponenten van de variabelen te **vermenigvuldigen** met de exponent van de
    macht.
-   {{< /attention >}}
+   </Attention>
 
-{{< attention "De wortel van een eenterm berekenen" >}}
+<Attention title="De wortel van een eenterm berekenen">
+
 De wortel van een eenterm berekenen we als volgt:
 
 1. Bereken de wortel van de **coëfficiënt** van de eenterm.
 2. Bereken de wortel van het **lettergedeelte** van de eenterm door de
    exponenten van de variabelen te **delen** door de graad van de
    wortel.
-   {{< /attention >}}
+   </Attention>
